--- a/04-data_wrangling.Rmd
+++ b/04-data_wrangling.Rmd
@@ -15,13 +15,13 @@ Once a package is installed, you need to load it using the library or require fu
 
 These are the libraries we'll be using today. Install if you don't have:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   install.packages(c("data.table","dplyr","stringr"))
 ```
 
 Now, import the libraries:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   library(data.table)
   library(dplyr)
   library(stringr)
@@ -32,25 +32,25 @@ Now, import the libraries:
 
 Before importing data, we generally want to set the working directory. This is a folder where we will be accessing or storing data and outputs:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   setwd("C:/Users/avillan/Documents/Class 2022/Class_Code")
 ```
   
 Another useful function is `getwd()`. This function returns an absolute filepath representing the current working directory of the R process, or `NULL` if the working directory is not available:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   getwd()
 ```
 
 To import data, we can use the `read.` function 
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto <- read.csv("Auto_MPG.csv", stringsAsFactors = FALSE)
 ```
 
 We can check the data set:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   class(df_auto)
   View(df_auto)
   dim(df_auto)
@@ -60,7 +60,7 @@ We can check the data set:
 
 Note that Horsepower is a character class
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   typeof(df_auto$Horsepower)
   df_auto$Horsepower
   summary(df_auto$Horsepower)
@@ -68,7 +68,7 @@ Note that Horsepower is a character class
 
 Upon inspection, it read NAs as question marks (a character), so everything became a character. We can fix this by reassigning as numeric:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto$Horsepower <- as.numeric(df_auto$Horsepower)
   summary(df_auto)
   df_auto$Horsepower
@@ -77,7 +77,7 @@ Upon inspection, it read NAs as question marks (a character), so everything beca
 
 Recall if you want to fix a column name you can use the colnames() function:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   colnames(df_auto)
   colnames(df_auto)[8] <- "Origin"
   colnames(df_auto)
@@ -85,7 +85,7 @@ Recall if you want to fix a column name you can use the colnames() function:
 
 If we want to export the data, we can use write.csv. The row.names = FALSE argument will stop the writer from outputting a row number:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   write.csv(df_auto, file="Auto_MPG_Clean.csv", row.names = FALSE)
 ```
 
@@ -107,7 +107,7 @@ The packages plyr, dplyr, ggplot2, stringr (and others) work within this framewo
 
 Select: select columns by name or helper function (choose which variables you want to look at ):
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   select(df_auto, MPG, Cylinders)
   select(df_auto, -Origin)
   select(df_auto, contains("Model"))
@@ -115,7 +115,7 @@ Select: select columns by name or helper function (choose which variables you wa
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto$MPG
   df_auto[,c('MPG','Cylinders')]
   df_auto[,-c('Origin')]
@@ -124,7 +124,7 @@ The base R equivalents are:
 
 Slice: Select rows by position (choose which rows of data you want):
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto$row_number <- 1:nrow(df_auto) #adding a new variable called row_number to help us see the index 
 
   slice(df_auto,1:5)
@@ -136,7 +136,7 @@ Slice: Select rows by position (choose which rows of data you want):
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto[1:5,]
   df_auto[150:nrow(df_auto),]
   df_auto[-c(1:5),]
@@ -144,7 +144,7 @@ The base R equivalents are:
 
 Rename: Rename the columns of a data frame
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   colnames(df_auto)
   
   df_auto <- rename(df_auto, Miles_Per_Gallon=MPG) #rename MPG to Miles_Per_Gallon
@@ -156,7 +156,7 @@ Rename: Rename the columns of a data frame
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   colnames(df_auto)[1] <- 'Miles_Per_Gallon'
   colnames(df_auto)
   
@@ -166,7 +166,7 @@ The base R equivalents are:
 
 Filter: Extract rows that meet logical criteria (filter the data frame by one, or multiple, conditions)
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   filter(df_auto, MPG>20)
   filter(df_auto, (MPG>20 & Acceleration>20))
   filter(df_auto, MPG==max(MPG))
@@ -175,7 +175,7 @@ Filter: Extract rows that meet logical criteria (filter the data frame by one, o
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto[df_auto$MPG>20,]
   df_auto[(df_auto$MPG>20 & df_auto$Acceleration>20),]
   df_auto[which.max(df_auto$MPG),]
@@ -184,28 +184,28 @@ The base R equivalents are:
 
 Sample: Randomly select a sample of n size or a proportion
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   sample_n(df_auto, 5)
   sample_frac(df_auto, 0.05)
 ```
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto[sample(1:nrow(df_auto),5),]
   df_auto[sample(1:nrow(df_auto),ceiling(0.05*nrow(df_auto))),]
 ```
 
 Mutate: Compute and append one or more new columns (create a new variable - returns the data frame)
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   mutate(df_auto, HP_Per_Cylinder=Horsepower/Cylinders)
   mutate(df_auto, Avg_HP_Per_Cylinder = mean(Horsepower/Cylinders, na.rm=TRUE))
 ```
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto$HP_Per_Cylinder <- df_auto$Horsepower / df_auto$Cylinders
   df_auto$Avg_HP_Per_Cylinder <- mean(df_auto$Horsepower / df_auto$Cylinders, na.rm = TRUE)
 ```
@@ -214,7 +214,7 @@ About the na.rm=TRUE argument. Some arithmatic functions sum, avg, count, etc. w
 
 Summarise: Summarise data into single row of values (aggregates the data into a single result. think avg, mean, min, max, etc.)
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   summarise(df_auto, 
             Avg_HP_Per_Cylinder=mean(Horsepower/Cylinders, na.rm = TRUE), 
             Min_HP_Per_Cylinder=min(Horsepower/Cylinders, na.rm=TRUE)
@@ -223,7 +223,7 @@ Summarise: Summarise data into single row of values (aggregates the data into a 
 
 The base R equivalents are:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   data.frame(
       Avg_HP_Per_Cylinder = mean(df_auto$Horsepower/df_auto$Cylinders, na.rm = TRUE),
       Min_HP_Per_Cylinder = min(df_auto$Horsepower/df_auto$Cylinders, na.rm=TRUE)
@@ -234,7 +234,7 @@ The base R equivalents are:
 
 Consider the previous operations. If we wanted to manipulate our data set in order, we traditionally have to do a reassignment each time:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   ddf_auto_hold <- rename(df_auto, Miles_Per_Gallon=MPG) #rename
   
   df_auto_hold <- mutate(df_auto_hold, HP_Per_Cylinder=Horsepower/Cylinders) #then create
@@ -248,7 +248,7 @@ Consider the previous operations. If we wanted to manipulate our data set in ord
 
 This is truely cumbersome the more complicated the data manipulation becomes. To avoid this, we can use the pipe operator `%>%`. The pipe "passes along" the results of one function to the next:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>% #note the pipe operator 
     rename(Miles_Per_Gallon=MPG) %>% #note the first argument is not required, because the pipe is passing it 
     mutate(HP_Per_Cylinder=Horsepower/Cylinders) %>%
@@ -264,13 +264,13 @@ The package stringr is a similar grammar language for manipulating strings. All 
 
 Consider that I want to extract the Car Make and Model from the Car Name:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   View(df_auto_hold)
 ```
 
 We note that the first word in Car_Name is the make, and the second word is the model. The str_split function will split the string into a vector of individual tokens:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>% 
     mutate(Car_Make=str_split(Car_Name," "))
   
@@ -279,7 +279,7 @@ We note that the first word in Car_Name is the make, and the second word is the 
 
 The str_split creates a list, which we can use to try to get the value:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>% 
     mutate(Car_Make=str_split(Car_Name," ")[[1]][1])
   View(df_auto_hold)
@@ -287,7 +287,7 @@ The str_split creates a list, which we can use to try to get the value:
   
 Note, this is treating the entire column, instead of by row. One way to address this is to rowise() by Car_Name, then create the variable:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>% 
     rowwise() %>%
     mutate(Car_Make=str_split(Car_Name," ")[[1]][1])
@@ -297,7 +297,7 @@ Note, this is treating the entire column, instead of by row. One way to address 
 
 An alternative to this group_by is the group_by() function:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>%
     group_by(Car_Name) %>%
     mutate(Car_Make=str_split(Car_Name," ")[[1]][1])
@@ -307,7 +307,7 @@ An alternative to this group_by is the group_by() function:
 
 With the structure built, I can just pipe on more functions to get additional variables:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto <- df_auto %>% 
     rowwise() %>%
     mutate(Car_Make=str_split(Car_Name," ")[[1]][1]) %>% 
@@ -318,7 +318,7 @@ With the structure built, I can just pipe on more functions to get additional va
   
 Now that we have Car Make and Model, we might want to summarize some information. We saw summarize the entire column earlier, but we can additionally summarize by a group. We use the group_by() to do so:
   
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   # Average MPG by Make and Model Year
   df_auto %>% 
     group_by(Car_Make, Model_Year) %>%
@@ -330,7 +330,7 @@ Now that we have Car Make and Model, we might want to summarize some information
     
 What if we want to create a variable for each Make that is the average MPG across the Make, by year?
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>%
     group_by(Car_Make, Model_Year) %>%
     mutate(Average_MPG=mean(MPG)) %>% #create a column that contains the avg MPG for the model year of the car
@@ -346,7 +346,7 @@ What if we want to create a variable for each Make that is the average MPG acros
 
 Typically when working with data, especially relational databases, we have information stored in multiple tables. For instance, we have the Auto data set:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   View(df_auto)
   
   # But we also have data on when a brand started:
@@ -371,7 +371,7 @@ Dplyr has different join types. The easiest way to think about this is as a Venn
     
 Inner_join:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>%
     inner_join(df_auto_start, by="Car_Make")
   
@@ -394,7 +394,7 @@ Inner_join:
 
 Left_join:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   df_auto_hold <- df_auto %>%
     left_join(df_auto_start, by="Car_Make")
     
@@ -428,7 +428,7 @@ We're not going to cover every function here, but what is great about these pack
 
 If you like SQL, there is a package allows you to manipulate data in a in-memory, or permanent database:
 
-```{r prompt=TRUE, eval=FALSE}
+```{r results='hide', message=FALSE, eval=FALSE}
   install.packages("sqldf")
   library(sqldf)
   
